--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+}
+
+.male{
+  font-size: large;
 }
 
 /* Option 1 - Modern sunset/sunrise feel */
